--- a/config/default_gtp1130.cfg
+++ b/config/default_gtp1130.cfg
@@ -284,7 +284,7 @@ enablePassingHacks = true
 # If commented out or unspecified, the default is to have no limit.
 maxVisits = 500
 # maxPlayouts = 300
-maxTime = 1.0
+# maxTime = 1.0
 
 # Ponder on the opponent's turn?
 ponderingEnabled = false
@@ -313,7 +313,7 @@ lagBuffer = 1.0
 #
 # Run "./katago benchmark" to tune this parameter and test the effect
 # of changes to any of other parameters.
-numSearchThreads = 8
+numSearchThreads = 12
 
 # Play a little faster if the opponent is passing, for human-friendliness.
 # Comment these out to disable them, such as if running a controlled match
